<resources>
    <string name="app_name">撸嗨</string>


    <string name="regional">大区</string>
    <string name="mainpage">主页</string>
    <string name="tuijiankaihei">推荐开黑</string>
    <string name="newfatie">最新发帖</string>
    <string name="wode">我</string>
    <string name="qiandao">签到</string>
    <string name="wodetiez">我的帖子</string>
    <string name="jifeng">积分商城</string>
    <string name="xitongshez">系统设置</string>
    <string name="tianjia">添加</string>
    <string name="search">搜素</string>
    <string name="yueheifriend">约黑好友</string>
    <string name="aiouniya">艾欧尼亚</string>
    <string name="dongtai">动态</string>
    <string name="gamefriend">游戏好友</string>
    <string name="action_settings">Settings</string>
    <string name="button_product_tour">product tour</string>
    <string name="welcom_head_01">Spreadsheets on the go</string>
    <string name="welcom_content_01">Get stuff done with or without an internet connection.</string>
    <string name="welcom_head_02">Share and edit together</string>
    <string name="welcom_content_02">Write on your own or invite more people to contribute.</string>
    <string name="welcom_head_03">Automatically save to the web</string>
    <string name="welcom_content_03">Never lose your progress, so you can keep working from any computer or device.</string>
    <string name="welcom_head_04">Edit Excel spreadsheets</string>
    <string name="welcom_content_04">Open, edit, and save Excel files - all within Sheets.</string>

</resources>
