<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:orientation="vertical"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="57dp"
    android:background="@color/black"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wode"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_centerInParent="true"
        android:textSize="20dp"
        />
        <TextView
            android:id="@+id/qiandao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/qiandao"
            android:text="@string/qiandao"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            />

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/ismy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/tx12"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:text="SKT-1 Caker"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="游戏大区:艾欧尼亚"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/youjiantou"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"

                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/huise"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:id="@+id/mytiezhi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="13dp"
                android:layout_height="20dp"
                android:src="@mipmap/my_posts_icon"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                />
       <TextView
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:text="@string/wodetiez"
           android:textSize="14sp"
           android:gravity="center_vertical"
           android:layout_marginLeft="17dp"
           />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/youjiantou"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"

                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/huise"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:id="@+id/jifeng"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:src="@mipmap/integral_icon"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/jifeng"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/youjiantou"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"

                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/huise"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:id="@+id/xitongset"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/system_settings_icon"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/xitongshez"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/youjiantou"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"

                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
