<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainpage"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@color/maincolor">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableRight="@mipmap/hompage_left"
                    android:padding="10dp"
                    android:text="@string/regional"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="16dp"
                    android:text="@string/mainpage"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@mipmap/homepage_right"

                    />
            </RelativeLayout>
   <!--   <fragment
                android:id="@+id/fragment_cycle_viewpager_content"
                android:name="com.king.luhai.Adapter.CycleViewPager"
                android:layout_width="match_parent"
                android:layout_height="180dip" />-->
    <RelativeLayout
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kaihei"
        >
        <TextView
            android:id="@+id/tuijiankaihei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuijiankaihei"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_toRightOf="@id/tuijiankaihei"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/kaihei1"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/kaihei2"
                android:layout_marginLeft="6dp"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/kaihei3"
                android:layout_marginLeft="6dp"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/kaihei4"
                android:layout_marginLeft="6dp"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/kaihei5"
                android:layout_marginLeft="6dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kaiheimore"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>
    </RelativeLayout>
            <GridView
                android:id="@+id/homepage_gridview"
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:numColumns="2"
                >

            </GridView>





        </LinearLayout>
    </ScrollView>


</LinearLayout>
